<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.ashi.courierservicesystem.RequestingForReceivingCourier">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:id="@+id/editTextSenderName"
        android:hint="@string/senderNameHint"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:id="@+id/editTextRecieverName"
        android:hint="@string/receiverNameHint"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editTextSenderAddress"
        android:hint="@string/senderAddressHint"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="165dp"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:id="@+id/editTextRecieverAddress"
        android:hint="@string/receiverAddressHint"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMaterialType"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:hint="@string/materialTypeHint"
        android:layout_marginTop="280dp"
        android:layout_alignRight="@+id/editTextRecieverAddress"
        android:layout_alignEnd="@+id/editTextRecieverAddress"
        android:layout_alignLeft="@+id/editTextRecieverAddress"
        android:layout_alignStart="@+id/editTextRecieverAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMaterialWeight"
        android:hint="@string/materialWeightHint"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="none"
        android:layout_marginTop="340dp"
        android:layout_alignRight="@+id/editTextMaterialType"
        android:layout_alignEnd="@+id/editTextMaterialType"
        android:layout_alignLeft="@+id/editTextMaterialType"
        android:layout_alignStart="@+id/editTextMaterialType" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextHint"
        android:textColor="#000000"
        android:background="@drawable/buttonborder"
        android:id="@+id/buttonNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
