<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.ashi.courierservicesystem.ServiceHome">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/viewNotification"
        android:id="@+id/buttonNotification"
        android:background="@drawable/buttonselector"
        android:textColor="#0000FF"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="74dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/updateStatus"
        android:id="@+id/buttonReceiving"
        android:textColor="#0000FF"
        android:background="@drawable/buttonselector"
        android:layout_below="@+id/buttonNotification"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/paymentDetails"
        android:background="@drawable/buttonselector"
        android:textColor="#0000FF"
        android:id="@+id/buttonPaymentDetails"
        android:layout_below="@+id/buttonReceiving"
        android:layout_alignLeft="@+id/buttonReceiving"
        android:layout_alignStart="@+id/buttonReceiving"
        android:layout_marginTop="54dp"
        android:layout_alignRight="@+id/buttonReceiving"
        android:layout_alignEnd="@+id/buttonReceiving" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/buttonselector"
        android:id="@+id/buttonLogout"
        android:textColor="#0000FF"
        android:layout_below="@+id/buttonPaymentDetails"
        android:layout_alignLeft="@+id/buttonPaymentDetails"
        android:layout_alignStart="@+id/buttonPaymentDetails"
        android:layout_marginTop="51dp"
        android:layout_alignRight="@+id/buttonPaymentDetails"
        android:layout_alignEnd="@+id/buttonPaymentDetails" />

</RelativeLayout>
