<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg2"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="#ffffff"
    android:padding="10dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="31dp"
    android:id="@+id/relativeLayout8">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/fNameLayout"
        android:layout_centerHorizontal="true">

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login_user"
        android:background="@drawable/buttonselector"
        android:text="@string/login"
        android:layout_above="@+id/btn_registration_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_registration_user"
        android:background="@drawable/buttonselector"
        android:text="@string/registration"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_username_userlogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:background="@drawable/editround"
        android:hint="@string/userName"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_password_userreg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center"
        android:background="@drawable/editround"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_alignBottom="@+id/fNameLayout"
        android:layout_alignLeft="@+id/et_username_userlogin"
        android:layout_alignStart="@+id/et_username_userlogin" />
</RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Login Here..."
        android:id="@+id/textView7"
        android:textSize="50dp"
        android:layout_above="@+id/relativeLayout8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:textColor="#ffffff" />
</RelativeLayout>