<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg2"
    android:layout_height="match_parent">

    <RelativeLayout
    android:id="@+id/rel"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:background="#FBFCFC"
    android:layout_marginTop="200dp"
    android:layout_marginLeft="15dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:textColorHint="#ffffff"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_username_userlogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:ems="10"
            android:gravity="center"
            android:textColorHint="#ffffff"
            android:background="@drawable/editround"
            android:hint="@string/userName"
            android:textColor="#ffffff"
            android:layout_below="@+id/lNameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/fNameLayout"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_password_userreg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:ems="10"
            android:gravity="center"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:background="@drawable/editround"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_below="@+id/et_username_userlogin"
            android:layout_marginTop="37dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login_user"
        android:layout_below="@+id/lNameLayout"
        android:layout_marginTop="60dp"
        android:textColor="#000000"
        android:background="@drawable/buttonborder"
        android:text="@string/login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Login Here..."
        android:id="@+id/textView5"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" />


</RelativeLayout>