<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.ashi.courierservicesystem.PaymentDetails">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">
   <TableRow android:layout_marginTop="50dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
   </TableRow>
        <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
        </TableRow>
    <TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />
    </TableRow>
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
    </TableRow>
        <TableRow>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView23"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />
        </TableRow>
    <TableRow>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:textColor="#ffffff"
        android:spinnerMode="dialog"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:prompt="@string/spinnerHeading"
        android:entries="@array/spinnerList" />
    </TableRow>
        <TableRow android:layout_marginTop="10dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        android:textColor="#000000"
        android:background="@drawable/buttonborder"
        android:id="@+id/buttonPaid"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner" />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notPaid"
        android:textColor="#000000"
        android:background="@drawable/buttonborder"
        android:id="@+id/buttonNotPaid"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonPaid"
        android:layout_alignEnd="@+id/buttonPaid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
